--- a/arch1/requirements.txt
+++ b/arch1/requirements.txt
@@ -1,8 +1,2 @@
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=0.24.2
-tensorflow>=2.6.0
-geoip2>=4.1.0
-python-dateutil>=2.8.2
-joblib>=1.0.1
-matplotlib>=3.4.3 
+-r ../requirements.txt
+geoip2>=4.1.0 
