--- a/arch2/requirements.txt
+++ b/arch2/requirements.txt
@@ -1,6 +1,2 @@
-numpy>=1.21.0
-pandas>=1.3.0
-scikit-learn>=0.24.2
-torch>=1.9.0
-tqdm>=4.62.0
-matplotlib>=3.4.2 
+-r ../requirements.txt
+torch>=2.0.0
